yamls/shellbox/service_shellbox-release-name.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shellbox
    chart: shellbox-1.0.1
    heritage: Helm
    release: RELEASE-NAME
  name: shellbox-RELEASE-NAME
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: shellbox
    release: RELEASE-NAME
    routed_via: RELEASE-NAME
  type: NodePort
