yamls/shellbox/networkpolicy_shellbox-release-name.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: shellbox
    chart: shellbox-1.0.1
    heritage: Helm
    release: RELEASE-NAME
  name: shellbox-RELEASE-NAME
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 9102
      protocol: TCP
    - port: 9117
      protocol: TCP
    - port: 9118
      protocol: TCP
    - port: 9181
      protocol: TCP
  podSelector:
    matchLabels:
      app: shellbox
      release: RELEASE-NAME
  policyTypes:
  - Ingress
